# advent-of-code-2020

./: .gitignore  README.md
day01/: day01.cabal
day01/src/: Main.hs
day02/: day02.cabal
day02/src/: Main.hs
day03/: day03.cabal
day03/src/: Main.hs
day04/: day04.cabal
day04/src/: Main.hs
day05/: day05.cabal
day05/src/: Main.hs
day06/: day06.cabal
day06/src/: Main.hs
day07/: day07.cabal
day07/src/: Main.hs
day08/: day08.cabal
day08/src/: Main.hs
day09/: day09.cabal
day09/src/: Main.hs
day10/: day10.cabal
day10/src/: Main.hs
day11/: day11.cabal
day11/src/: Main.hs
day12/: day12.cabal
day12/src/: Main.hs
day13/: day13.cabal
day13/src/: Main.hs
day14/: day14.cabal  stack.yaml
day14/inputs/: s1_input.txt
day14/src/: Main.hs
day15/: day15.cabal
day15/src/: Main.hs
day16/: day16.cabal
day16/src/: Main.hs
day17/: day17.cabal
day17/src/: Main.hs  Main2.hs
day18/: day18.cabal
day18/src/: Main.hs  Main2.hs
day19/: day19.cabal
day19/src/: Main.hs
day20/: day20.cabal
day20/src/: Main.hs
day21/: day21.cabal
day21/src/: Main.hs
day22/: day22.cabal
day22/src/: Main.hs
day23/: day23.cabal
day23/src/: Main.hs
day24/: day24.cabal
day24/src/: Main.hs
day25/: day25.cabal
day25/src/: Main.hs
