name:                day01
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GaimeWolves/day01#readme
author:              GameWolves
maintainer:          gamewolvesofficial@gmail.com
copyright:           2020 GameWolves
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable day01
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
