name:                day02
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GaimeWolves/advent-of-code-2020
author:              GameWolves
maintainer:          gamewolvesofficial@gmail.com
copyright:           2020 GameWolves
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable day02
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
